--- a/test-files/ZonalModelAttempt.ipynb
+++ b/test-files/ZonalModelAttempt.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ZonalModelAttempt.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODJgfC+rV9K+yDGAVdJLs7",
+      "authorship_tag": "ABX9TyMUvOinhdbsTO1/b2K1+uf/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -144,7 +144,7 @@
         "  n_edge.set_shape(n_node.get_shape())\n",
         "  return senders, receivers, n_edge"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "    \"\"\"Decodes from the latent graph.\"\"\"\n",
         "    return self._decoder_network(latent_graph.nodes)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "def time_diff(input_sequence):\n",
         "  return input_sequence[:, 1:] - input_sequence[:, :-1]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -595,7 +595,7 @@
         "\n",
         "  return position_sequence_noise"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -614,6 +614,7 @@
         "# Create a description of the features.\n",
         "_FEATURE_DESCRIPTION = {\n",
         "    'pos': tf.io.VarLenFeature(tf.string),\n",
+        "    'vel': tf.io.VarLenFeature(tf.string)\n",
         "}\n",
         "\n",
         "_FEATURE_DESCRIPTION_WITH_GLOBAL_CONTEXT = _FEATURE_DESCRIPTION.copy()\n",
@@ -625,9 +626,17 @@
         "        'in': np.float32,\n",
         "        'out': tf.float32\n",
         "    },\n",
-        "    'step_context': {\n",
+        "    'vel': {\n",
         "        'in': np.float32,\n",
         "        'out': tf.float32\n",
+        "    },\n",
+        "    'timestep': {\n",
+        "        'in': np.int64,\n",
+        "        'out': tf.int64\n",
+        "    },\n",
+        "    'group_id': {\n",
+        "        'in': np.int64,\n",
+        "        'out': tf.int64\n",
         "    }\n",
         "}\n",
         "\n",
@@ -662,23 +671,28 @@
         "    feature_description = _FEATURE_DESCRIPTION_WITH_GLOBAL_CONTEXT\n",
         "  else:\n",
         "    feature_description = _FEATURE_DESCRIPTION\n",
+        "  \n",
         "  context, parsed_features = tf.io.parse_single_sequence_example(\n",
         "      example_proto,\n",
         "      context_features=_CONTEXT_FEATURES,\n",
         "      sequence_features=feature_description)\n",
+        "  \n",
         "  for feature_key, item in parsed_features.items():\n",
         "    convert_fn = functools.partial(\n",
         "        convert_to_tensor, encoded_dtype=_FEATURE_DTYPES[feature_key]['in'])\n",
         "    parsed_features[feature_key] = tf.py_function(\n",
         "        convert_fn, inp=[item.values], Tout=_FEATURE_DTYPES[feature_key]['out'])\n",
-        "\n",
+        "  \n",
         "  # There is an extra frame at the beginning so we can calculate pos change\n",
         "  # for all frames used in the paper.\n",
         "  position_shape = [metadata['sequence_length'] + 1, -1, metadata['dim']]\n",
         "\n",
-        "  # Reshape positions to correct dim:\n",
+        "  # Reshape positions/velocities to correct dim:\n",
         "  parsed_features['pos'] = tf.reshape(parsed_features['pos'],\n",
         "                                           position_shape)\n",
+        "  parsed_features['vel'] = tf.reshape(parsed_features['vel'],\n",
+        "                                           position_shape)\n",
+        "\n",
         "  # Set correct shapes of the remaining tensors.\n",
         "  sequence_length = metadata['sequence_length'] + 1\n",
         "  if 'context_mean' in metadata:\n",
@@ -686,6 +700,7 @@
         "    parsed_features['step_context'] = tf.reshape(\n",
         "        parsed_features['step_context'],\n",
         "        [sequence_length, context_feat_len])\n",
+        "  \n",
         "  # Decode particle type explicitly\n",
         "  context['particle_type'] = tf.py_function(\n",
         "      functools.partial(convert_fn, encoded_dtype=np.int64),\n",
@@ -699,7 +714,7 @@
         "  \"\"\"Splits trajectory into sliding windows.\"\"\"\n",
         "  # Our strategy is to make sure all the leading dimensions are the same size,\n",
         "  # then we can use from_tensor_slices.\n",
-        "\n",
+        "  \n",
         "  trajectory_length = features['pos'].get_shape().as_list()[0]\n",
         "\n",
         "  # We then stack window_length position changes so the final\n",
@@ -725,9 +740,15 @@
         "  # Get the corresponding positions\n",
         "  model_input_features['pos'] = tf.stack(pos_stack)\n",
         "\n",
+        "  vel_stack = []\n",
+        "  for idx in range(input_trajectory_length):\n",
+        "    vel_stack.append(features['vel'][idx:idx + window_length])\n",
+        "  # Get the corresponding velocities\n",
+        "  model_input_features['vel'] = tf.stack(vel_stack)\n",
+        "\n",
         "  return tf.data.Dataset.from_tensor_slices(model_input_features)"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -956,7 +977,7 @@
         "        \n",
         "        return "
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -967,7 +988,7 @@
         },
         "id": "ky-wfGjmHoLp",
         "cellView": "form",
-        "outputId": "b0209b2b-db24-4efc-c553-f8b417ae3b19"
+        "outputId": "e35ffdcd-d955-48dd-9307-d1e78849b1fb"
       },
       "source": [
         "#@title ### Create Training Data\n",
@@ -1001,13 +1022,13 @@
         "for i in tqdm(range(param_values.shape[0])):\n",
         "    evaluate_zonal_model(param_values[i])"
       ],
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 50/50 [04:16<00:00,  5.13s/it]\n"
+            "100%|██████████| 50/50 [04:05<00:00,  4.91s/it]\n"
           ]
         }
       ]
@@ -1058,7 +1079,7 @@
         "parsed_valid_dataset = parsed_valid_dataset.shuffle(10000, reshuffle_each_iteration=True)\n",
         "parsed_valid_dataset = parsed_valid_dataset.batch(4, drop_remainder=True)"
       ],
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -1125,14 +1146,13 @@
         "    \n",
         "    return gn"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AbMPiqZENpAe",
-        "cellView": "form"
+        "id": "AbMPiqZENpAe"
       },
       "source": [
         "#@title ### More Functions\n",
@@ -1183,6 +1203,18 @@
         "  # Remove the target from the input.\n",
         "  tensor_dict['pos'] = pos[:, :-1]\n",
         "\n",
+        "  # Velocity is encoded as [sequence_length, num_particles, dim] but the model\n",
+        "  # expects [num_particles, sequence_length, dim].\n",
+        "  vel = tensor_dict['vel']\n",
+        "  print(tf.shape(vel))\n",
+        "  vel = tf.transpose(vel, perm=[1, 0, 2])\n",
+        "\n",
+        "  # The target position is the final step of the stack of positions.\n",
+        "  target_position = vel[:, -1]\n",
+        "\n",
+        "  # Remove the target from the input.\n",
+        "  tensor_dict['vel'] = vel[:, :-1]\n",
+        "\n",
         "  # Compute the number of particles per example.\n",
         "  num_particles = tf.shape(pos)[0]\n",
         "  # Add an extra dimension for stacking via concat.\n",
@@ -1226,12 +1258,20 @@
         "  out_dict = {**context}\n",
         "  # Position is encoded as [sequence_length, num_particles, dim] but the model\n",
         "  # expects [num_particles, sequence_length, dim].\n",
-        "  print(2)\n",
         "  pos = tf.transpose(features['pos'], [1, 0, 2])\n",
         "  # The target position is the final step of the stack of positions.\n",
         "  target_position = pos[:, -1]\n",
         "  # Remove the target from the input.\n",
         "  out_dict['pos'] = pos[:, :-1]\n",
+        "\n",
+        "  # Velocity is encoded as [sequence_length, num_particles, dim] but the model\n",
+        "  # expects [num_particles, sequence_length, dim].\n",
+        "  vel = tf.transpose(features['vel'], [1, 0, 2])\n",
+        "  # The target position is the final step of the stack of positions.\n",
+        "  target_position = vel[:, -1]\n",
+        "  # Remove the target from the input.\n",
+        "  out_dict['vel'] = vel[:, :-1]\n",
+        "\n",
         "  # Compute the number of nodes\n",
         "  out_dict['n_particles_per_example'] = [tf.shape(pos)[0]]\n",
         "  if 'step_context' in features:\n",
@@ -1239,18 +1279,13 @@
         "  out_dict['is_trajectory'] = tf.constant([True], tf.bool)\n",
         "  return out_dict, target_position"
       ],
-      "execution_count": null,
+      "execution_count": 80,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BgUJ3nUEOVfs",
-        "cellView": "form",
-        "outputId": "68c50659-ca75-4808-df04-136697befb01"
+        "id": "BgUJ3nUEOVfs"
       },
       "source": [
         "#@title ### Create Dataset\n",
@@ -1302,16 +1337,33 @@
         "# If in train mode, repeat dataset forever and shuffle.\n",
         "ds = ds.repeat()\n",
         "ds = ds.shuffle(512)\n",
+        "\n",
         "# Custom batching on the leading axis.\n",
         "ds = batch_concat(ds, batch_size)"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kI_Hf6iSE8mV",
+        "outputId": "ee7ceb5a-42e3-4ee7-9362-1ea2d664a5aa"
+      },
+      "source": [
+        "print(ds)\n",
+        "ds=None"
+      ],
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Tensor(\"Shape:0\", shape=(3,), dtype=int32)\n"
+            "<ShuffleDataset shapes: ({particle_type: (None,), pos: (None, 6, 2), vel: (7, None, 2), n_particles_per_example: (1,)}, (None, 2)), types: ({particle_type: tf.int64, pos: tf.float32, vel: tf.float32, n_particles_per_example: tf.int32}, tf.float32)>\n"
           ]
         }
       ]
@@ -1403,7 +1455,7 @@
         "    return loss\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 82,
       "outputs": []
     },
     {
@@ -1411,10 +1463,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 329
         },
         "id": "X8VFYHpFS-6X",
-        "outputId": "2c85b9ed-a91b-4fcb-c911-56dbb8009f00"
+        "outputId": "511aa78f-eb45-4dfc-9a01-7c869d6134cb"
       },
       "source": [
         "min_lr = 1e-6\n",
@@ -1447,7 +1499,7 @@
         "            )\n",
         "            print(\"Seen so far: %d samples\" % ((step + 1) * batch_size))"
       ],
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1516,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mFailedPreconditionError\u001b[0m                   Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-73377706ef16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Iterate over the batches of the dataset.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx_batch_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch_train\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mloss_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_batch_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-83-73377706ef16>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Iterate over the batches of the dataset.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx_batch_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch_train\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mloss_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_batch_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_batch_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/data/ops/iterator_ops.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    759\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__next__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    760\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 761\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_internal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    762\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOutOfRangeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    763\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/data/ops/iterator_ops.py\u001b[0m in \u001b[0;36m_next_internal\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    745\u001b[0m           \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_iterator_resource\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    746\u001b[0m           \u001b[0moutput_types\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flat_output_types\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 747\u001b[0;31m           output_shapes=self._flat_output_shapes)\n\u001b[0m\u001b[1;32m    748\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    749\u001b[0m       \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/ops/gen_dataset_ops.py\u001b[0m in \u001b[0;36miterator_get_next\u001b[0;34m(iterator, output_types, output_shapes, name)\u001b[0m\n\u001b[1;32m   2726\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0m_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2727\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2728\u001b[0;31m       \u001b[0m_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from_not_ok_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2729\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_FallbackException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2730\u001b[0m       \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
